--- a/web/src/app/update-employee/update-employee.component.html
+++ b/web/src/app/update-employee/update-employee.component.html
@@ -1,21 +1,19 @@
-<h3>Create Employee</h3>
-<div class="createForm" [hidden]="submitted">
+<h3>Update Employee</h3>
+
+<div class="updateForm" [hidden]="submitted">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="firstName">First Name</label>
       <input type="text" class="form-control" id="firstName" required [(ngModel)]="employee.firstName" name="firstName">
     </div>
-
     <div class="form-group">
       <label for="lastName">Last Name</label>
       <input type="text" class="form-control" id="lastName" required [(ngModel)]="employee.lastName" name="lastName">
     </div>
-
     <div class="form-group">
-      <label for="firstName">Email</label>
+      <label for="email">Email</label>
       <input type="text" class="form-control" id="email" required [(ngModel)]="employee.email" name="email">
     </div>
-
-    <button type="submit" class="btn btn-success">Create</button>
+    <button type="submit" class="btn btn-success">Save</button>
   </form>
 </div>
