Fixed endpoint passing wrong params to API.

--- a/src/web/src/app/update-employee/update-employee.component.html
+++ b/src/web/src/app/update-employee/update-employee.component.html
@@ -1,6 +1,6 @@
 <h3>Update Employee</h3>
 
-<div class="updateForm" [hidden]="submitted">
+<div class="updateForm">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="firstName">First Name</label>
