Fixed root component styling, removed unessecary title.

--- a/src/web/src/app/app.component.html
+++ b/src/web/src/app/app.component.html
@@ -9,10 +9,7 @@
     </li>
   </ul>
 </nav>
-<div class="container">
-  <br>
-  <h2 class="main-display">{{ title }}</h2>
-  <hr>
+<div class="container mt-4">
   <div class="card">
     <div class="card-body">
       <router-outlet></router-outlet>
