--- a/src/web/src/app/app.component.html
+++ b/src/web/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <a class="navbar-brand" href="#">Employee Registry</a>
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
